--- a/rootfolder/assets/styles.css
+++ b/rootfolder/assets/styles.css
@@ -6,7 +6,7 @@ p {
     }
 
 h1  {
-    font-family: "Montserrat", sans-serif;
+    font-family: montserrat, sans-serif;
     font-weight: 700;
     font-style: normal;
     font-size: 72px;
@@ -14,7 +14,7 @@ h1  {
     }
 
 h2  {
-    font-family: "Montserrat", sans-serif;
+    font-family: montserrat, sans-serif;
     font-weight: 400;
     font-style: normal;
     letter-spacing: 5px;
