--- a/montspeci/styles.css
+++ b/montspeci/styles.css
@@ -10,7 +10,7 @@ h1  {
     font-weight: 700;
     font-style: normal;
     font-size: 72px;
-    line-spacing: 4px;
+    line-height: 4px;
     color: #000000;
     }
 
