--- a/montspeci/styles.css
+++ b/montspeci/styles.css
@@ -5,14 +5,15 @@ p {
     font-size: 12px;
     }
 
-h1  {
+h1 {
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-style: normal;
     font-size: 72px;
-    line-height: 4px;
+    line-height: 52px;
+    letter-spacing: -8px;
     color: #000000;
-    }
+}
 
 h2  {
     font-family: "Montserrat", sans-serif;
