--- a/montspeci/styles.css
+++ b/montspeci/styles.css
@@ -1,28 +1,59 @@
-p {
-    font-family: "Montserrat",sans-serif;
-    font-weight: 400; 
-    font-style: normal;
-    font-size: 12px;
-    }
-
-h1 {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-    font-size: 72px;
-    line-height: 52px;
-    letter-spacing: -8px;
-    color: #000000;
+#text01 {
+    text-align: center;
+    color: rgb(23, 23, 23);
+    font-family: Montserrat, "sans-serif";
+    letter-spacing: -0.3rem;
+    width: 100%;
+    font-size: 7em;
+    line-height: 0.75;
+    font-weight: 900;
 }
 
-h2  {
-    font-family: "Montserrat", sans-serif;
+#text02  {
+    text-align: center;
+    color: rgb(23, 23, 23);
+    font-family: Montserrat, "sans-serif";
+    letter-spacing: -0.3rem;
+    width: 100%;
+    font-size: 7em;
+    line-height: 0.75;
+    font-weight: 900;
+}
+
+#text03  {
+    text-align: right;
+    color: rgb(23, 23, 23);
+    font-family: Montserrat, "sans-serif";
+    letter-spacing: -0.025rem;
+    width: 100%;
+    font-size: 1.5em;
+    line-height: 1.375;
+    font-weight: 700;
+}
+
+#text04  {
+    text-align: right;
+    text-transform: lowercase;
+    color: rgb(23, 23, 23);
+    font-family: Montserrat, "sans-serif";
+    letter-spacing: -0.025rem;
+    width: 100%;
+    font-size: 1.25em;
+    line-height: 1.375;
     font-weight: 400;
-    font-style: normal;
-    letter-spacing: 5px;
-    margin-left: 80px;
-    color: #000000;
-    }
+}
+
+#text05   {
+    text-align: left;
+    color: rgb(23, 23, 23);
+    font-family: Montserrat, "sans-serif";
+    letter-spacing: 0.1rem;
+    width: calc(100% + 0.1rem);
+    font-size: 3.375em;
+    line-height: 1.375;
+    font-weight: 100;
+}
+
 
 .two-columns
     {    float: left;
