--- a/montspeci/styles.css
+++ b/montspeci/styles.css
@@ -54,12 +54,24 @@ h1 {
     font-weight: 100;
 }
 
+.five
 
-.two-columns
-    {    float: left;
-         margin: 0 1.5%;
-         width: 45%;
-    }
+.six
+
+.seven
+
+.eight
+
+.nine
+
+.ten
+
+
+.two-columns    {    
+    float: left;
+    margin: 0 1.5%;
+    width: 45%;
+                }
 
 
 
