--- a/montspeci/styles.css
+++ b/montspeci/styles.css
@@ -10,7 +10,7 @@ h1 {
 }
 
 .one  {
-    text-align: center;
+    text-align: right;
     color: rgb(23, 23, 23);
     font-family: Montserrat, "sans-serif";
     letter-spacing: -0.3rem;
